update layout for adding a bucket

--- a/src/app/components/buckets/addbucket/addbucket.html
+++ b/src/app/components/buckets/addbucket/addbucket.html
@@ -24,25 +24,30 @@ id="addbucketbutton" (click)="showDrawer()">
           <label for="name">Bucket Name</label>
           <input #firstInput id="name" type="text" class="form-control" name="name" [(ngModel)]="name" autocomplete="off" required>
         </div>
-        <div class="form-group">
-          <label for="name">Bucket Type</label>
-          <select class="form-control custom-select" name="type" [(ngModel)]="type" required>
-            <option value="monthly" selected>Monthly</option>
-            <option value="savings">Savings</option>
-          </select>
+        <div class="row">
+          <div class="col-xs-6">
+            <div class="form-group">
+              <label for="name">Bucket Type</label>
+              <select class="form-control custom-select" name="type" [(ngModel)]="type" required>
+                <option value="monthly" selected>Monthly</option>
+                <option value="savings">Savings</option>
+              </select>
+            </div>
+          </div>
+          <div class="col-xs-6">
+            <div *ngIf="type === 'monthly'" class="form-group">
+              <label for="budget">Monthly Budget</label>
+              <input id="budget" type="number" class="form-control" name="budget" [(ngModel)]="budget" autocomplete="off" min=1 required>
+            </div>
+            <div *ngIf="type === 'savings'" class="form-group">
+              <label for="goal">Savings Goal</label>
+              <input id="goal" type="number" class="form-control" name="goal" [(ngModel)]="goal" autocomplete="off" min=1 required>
+            </div>
+          </div>
         </div>
-
-        <div *ngIf="type === 'monthly'" class="form-group">
-          <label for="budget">Monthly Budget</label>
-          <input id="budget" type="number" class="form-control" name="budget" [(ngModel)]="budget" autocomplete="off" min=1 required>
-        </div>
-        <div *ngIf="type === 'savings'" class="form-group">
-          <label for="goal">Savings Goal</label>
-          <input id="goal" type="number" class="form-control" name="goal" [(ngModel)]="goal" autocomplete="off" min=1 required>
-        </div>
-
-        <button type="submit" class="btn btn-success btn-block">Add Bucket</button>
+        <button type="submit" class="btn btn-success pull-right">Add Bucket</button>
       </form>
+
     </div>
   </div>
 </div>
