--- a/src/app/components/buckets/addbucket/addbucket.scss
+++ b/src/app/components/buckets/addbucket/addbucket.scss
@@ -17,6 +17,29 @@
   z-index: 1100;
 }
 
-label{
-  color: white;
+form{
+  label{
+    color: white;
+  }
+  input, button{
+    max-height: 38px;
+  }
 }
+
+@media (min-width:992px){
+  form{
+    display: flex;
+    justify-content: space-between;
+    & > .form-group:first-child{
+      flex: 1;
+      padding-right: 30px;
+    }
+    .row > div{
+      padding-left: 0;
+    }
+    button{
+      margin: 32px 0 0 15px;
+    }
+  }
+}
+
