--- a/src/styles/fixes.scss
+++ b/src/styles/fixes.scss
@@ -6,3 +6,8 @@ input[type="date"]{
   padding-left: 10px;
   padding-right: 2px;
 }
+
+.input-group{
+  background-color: white;
+  border-radius: 0.25rem;
+}
