updated some colors

--- a/src/app/components/transactions/addtransaction/addtransaction.html
+++ b/src/app/components/transactions/addtransaction/addtransaction.html
@@ -1,4 +1,4 @@
-<div class="card">
+<div class="card card-inverse bg-inverse text-white mt-3">
   <div class="card-block">
     <form (ngSubmit)="addTransaction(addTransactionForm, firstInput)" #addTransactionForm="ngForm">
       <div class="row">
