--- a/src/app/pages/bucket/bucket.page.html
+++ b/src/app/pages/bucket/bucket.page.html
@@ -1,8 +1,7 @@
 <loading *ngIf="!isLoaded"></loading>
 <header *ngIf="isLoaded" [homeButton]="true" [title]="bucket.name"></header>
-<div *ngIf="isLoaded" class="container mt-3">
-  <span *ngIf="bucket.type === 'monthly'">
-    <circlechart [total]="total" [type]="'monthly'" [amount]="budget" [key]="bucket.$key"></circlechart>
+<div *ngIf="isLoaded" class="container mt-1">
+  <span *ngIf="bucket.type === 'monthly'">    
     <div class="row">
       <div class="col-sm-7">
         <h1>{{month}} <sup class="text-muted">‘{{year}}</sup></h1>
@@ -19,9 +18,13 @@
         </div>
       </div>
     </div>
+    <circlechart [total]="total" [type]="'monthly'" [amount]="budget" [key]="bucket.$key"></circlechart>
     <transactionlist class="mt-1" [month]="selectedMonth" [key]="bucket.$key" (total)="updateTotal($event)"></transactionlist>
   </span>
   <span *ngIf="bucket.type === 'savings'">
+    <div class="saving-controls pull-right">
+      <button class="btn btn-danger btn-sm" (click)="deleteBucket(bucket)"><i class="fa fa-trash" aria-hidden="true"></i></button>
+    </div>
     <circlechart [total]="total" [type]="'savings'" [amount]="bucket.goal" [key]="bucket.$key"></circlechart>
     <transactionlist class="mt-1" [key]="bucket.$key" (total)="updateTotal($event)"></transactionlist>
   </span>
