--- a/src/app/components/tutorial/tutorial.html
+++ b/src/app/components/tutorial/tutorial.html
@@ -6,8 +6,8 @@
         Getting Started
       </h4>
       <div class="alert alert-warning mt-2" role="alert">
-        Welcome to <strong>Buckets.Money</strong>, a simple budgeting app.
-        We take principles from zero-based budgeting and help you apply them practically.<br><br>
+        Welcome to <strong>Buckets</strong>, a simple budgeting app.
+        We take principles from zero-based budgeting and help you apply them practically. This app is currently in development, but you are welcome to test it out for free.<br><br>
         <strong>Click next to get started.</strong>
       </div>
       <button class="btn btn-primary pull-right" (click)="showStep2()">Next</button>
