--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -1,7 +1,7 @@
 <main class="mt-3 space-around">
   <div class="card card-inverse bg-inverse text-white">
     <div class="card-block">
-      <h4 class="card-title">Welcome to Buckets.Money</h4>
+      <h4 class="card-title">Welcome to Buckets</h4>
       <p>A new simple budgeting app.</p>
       <button class="btn btn-primary btn-block" (click)="auth.login()"><i class="fa fa-facebook-square" aria-hidden="true"></i> Login</button>
     </div>
