--- a/src/app/components/tutorial/tutorial.scss
+++ b/src/app/components/tutorial/tutorial.scss
@@ -1,9 +1,25 @@
+.container{
+  position: absolute;
+  top: 0; left: 0; right: 0; bottom: 0;
+  height: 100%;
+  width: 100%;
+  z-index: 1200;
+}
 .card{
   box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+  height: 80%;
+  margin-top: 10%;
+  padding-bottom: 60px;
 }
-.carousel-indicators li{
-  border-color: #ccc;
-  &.active{
-    background-color: #ccc;
+.card-block{
+  overflow-y: scroll;
+  height: 100%;
+}
+.card-footer{
+  width: 100%;
+  position: absolute;
+  bottom: 0;
+  span{
+    line-height: 36px;
   }
 }
