adding button to savings buckets

--- a/src/app/pages/bucket/bucket.page.html
+++ b/src/app/pages/bucket/bucket.page.html
@@ -25,6 +25,7 @@
   </span>
   <span *ngIf="bucket.type === 'savings'">
     <div class="saving-controls pull-right">
+      <button class="btn btn-success btn-sm" (click)="openFriendsSidebar()"><i class="fa fa-user-plus" aria-hidden="true"></i></button>
       <button class="btn btn-danger btn-sm" (click)="deleteBucket(bucket)"><i class="fa fa-trash" aria-hidden="true"></i></button>
     </div>
     <circlechart [total]="total" [type]="'savings'" [amount]="bucket.goal" [key]="bucket.$key"></circlechart>
