--- a/src/app/pages/bucket/bucket.page.html
+++ b/src/app/pages/bucket/bucket.page.html
@@ -1,6 +1,6 @@
 <loading *ngIf="!isLoaded"></loading>
 <header *ngIf="isLoaded" [homeButton]="true" [title]="bucket.name"></header>
-<friendssidebar></friendssidebar>
+<friendssidebar [bucket]="bucket"></friendssidebar>
 <div *ngIf="isLoaded" class="container mt-1">
   <span *ngIf="bucket.type === 'monthly'">
     <div class="row">
