working on fleshing out invites

--- a/src/app/components/buckets/bucketcard/bucketcard.html
+++ b/src/app/components/buckets/bucketcard/bucketcard.html
@@ -1,4 +1,4 @@
-<div class="flip-container mt-1" [ngClass]="{'flipped': isFlipped}">
+<div class="flip-container" [ngClass]="{'flipped': isFlipped}">
   <div class="flipper">
     <div class="card card-front" (click)="enterBucket()">
       <button class="btn-close btn btn-primary btn-small pull-right" (click)="flip($event)">
