--- a/src/app/components/buckets/bucketlist/bucketlist.scss
+++ b/src/app/components/buckets/bucketlist/bucketlist.scss
@@ -10,6 +10,23 @@ ul{
   }
 }
 
+.card{
+	position: relative;
+	box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+	width: 100%;
+	min-width: 240px;
+	height: 240px;
+
+	.card-block{
+    padding:.75rem;
+  }
+}
+
+.card-title{
+	font-size: 18px;
+	width: 100%;
+}
+
 .fake-li{
   height: 0px;
 }
