--- a/src/app/components/friendssidebar/friendssidebar.html
+++ b/src/app/components/friendssidebar/friendssidebar.html
@@ -10,9 +10,19 @@ class="navbar navbar-dark bg-inverse navbar-full animated"
     </a>
     <button class="btn btn-danger pull-right btn-close" (click)="utils.hideSidebar()"><i class="fa fa-times" aria-hidden="true"></i></button>
   </div>
+  <ul class="list-group mt-1">
+    <li class="list-group-item space-between" *ngFor="let editor of editors">
+      <img class="rounded" src="{{editor.photo}}" alt="{{editor.name}}">
+      <div>{{editor.name}}<br>
+        <div id="invite_buttons">
+          <button class="btn btn-danger btn-sm" (click)="removeAsEditor(editor)">Remove</button>
+        </div>
+      </div>
+    </li>
+  </ul>
   <hr>
   <ul class="list-group">
-    <li class="list-group-item space-between" *ngFor="let friend of faces.friendsUsingApp">
+    <li class="list-group-item space-between" *ngFor="let friend of friends">
       <img class="rounded" src="{{friend.picture.data.url}}" alt="{{friend.name}}">
       <div>{{friend.name}}<br>
         <div id="invite_buttons">
