progress on invites

--- a/src/app/components/buckets/bucketlist/bucketlist.html
+++ b/src/app/components/buckets/bucketlist/bucketlist.html
@@ -4,7 +4,7 @@
     <li class="mt-1" *ngFor="let bucket of buckets">
       <bucketcard [bucket]="bucket"></bucketcard>
     </li>
-    <li class="mt-1" *ngFor="let invite of invitedTo">
+    <li class="mt-1" *ngFor="let invite of invites">
       <invitecard [invite]="invite"></invitecard>
     </li>
     <li class="fake-li" aria-hidden="true"></li>
