--- a/src/app/components/friendssidebar/friendssidebar.html
+++ b/src/app/components/friendssidebar/friendssidebar.html
@@ -26,9 +26,9 @@ class="navbar navbar-dark bg-inverse navbar-full animated"
       <img class="rounded" src="{{friend.picture.data.url}}" alt="{{friend.name}}">
       <div>{{friend.name}}<br>
         <div id="invite_buttons">
-          <button *ngIf="bucket.invited && bucket.invited.indexOf(friend.id) >= 0" class="btn-sm btn-success btn disabled" (click)="inviteUserToEdit(friend.id)" disabled>invited</button>
-          <button *ngIf="bucket.invited && bucket.invited.indexOf(friend.id) >= 0" class="btn-sm btn-warning btn" (click)="cancelInvite(friend.id)"><i class="fa fa-undo" aria-hidden="true"></i></button>
-          <button *ngIf="!bucket.invited || bucket.invited.indexOf(friend.id) === -1" class="btn-sm btn-success btn" (click)="inviteUserToEdit(friend.id)">invite to edit</button>
+          <button *ngIf="invite_pending && invite_pending.indexOf(friend.id) >= 0" class="btn-sm btn-success btn disabled" (click)="inviteUserToEdit(friend.id)" disabled>invited</button>
+          <button *ngIf="invite_pending && invite_pending.indexOf(friend.id) >= 0" class="btn-sm btn-warning btn" (click)="cancelInvite(friend.id)"><i class="fa fa-undo" aria-hidden="true"></i></button>
+          <button *ngIf="!invite_pending || invite_pending.indexOf(friend.id) === -1" class="btn-sm btn-success btn" (click)="inviteUserToEdit(friend.id)">invite to edit</button>
         </div>
       </div>
     </li>
