added header, and auth services, cleaned up code

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,2 @@
+<md-progress-bar color="accent" class="loading-bar" mode="query" *ngIf="helpers.loading"></md-progress-bar>
 <router-outlet></router-outlet>
