--- a/src/styles/_layout.scss
+++ b/src/styles/_layout.scss
@@ -16,6 +16,8 @@ $lg-boundary: 1200px;
 
 
 .page-container{
+  margin: 30px;
+  padding: 30px;
   max-width: auto;
   margin: auto;
   @include breakpoint(sm-up) {
