notifications and error handling of logins

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,3 @@
+<notification *ngIf="helpers.notification" [notification]="helpers.notification"></notification>
 <md-progress-bar color="accent" class="loading-bar" mode="query" *ngIf="helpers.loading"></md-progress-bar>
 <router-outlet></router-outlet>
