--- a/src/app/components/notification/notification.component.scss
+++ b/src/app/components/notification/notification.component.scss
@@ -3,6 +3,6 @@
 .notification {
   button {
     margin-left: 30px;
-    background-color: md-color($accent, A100);
+    background-color: mat-color($accent, A100);
   }
 }
