--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -1,6 +1,4 @@
 <header *ngIf="!helpers.loading"></header>
 <main *ngIf="!helpers.loading" class="page-container">
-  <h1>
-    Hello {{user?.me?.name}}
-  </h1>
+  <bucketlist></bucketlist>
 </main>
