--- a/src/styles/_global.scss
+++ b/src/styles/_global.scss
@@ -1,11 +1,14 @@
 h1 {
-  margin: 30px 0;
+  margin: 0 0 30px 0;
+}
+md-toolbar, md-toolbar-row {
+  height: 48px; min-height: 48px; max-height: 48px;
 }
 md-toolbar-row {
   padding: 0 16px;
   .flex-spacer { flex: 1 1 auto; }
 }
 
-button{
+button {
   box-shadow: none;
 }
