--- a/src/styles/_layout.scss
+++ b/src/styles/_layout.scss
@@ -17,13 +17,15 @@ $lg-boundary: 1200px;
 
 .page-container{
   margin: 30px;
-  padding: 30px;
+  padding: 30px 15px;
   max-width: auto;
   margin: auto;
   @include breakpoint(sm-up) {
+    padding: 30px;
     max-width: 720px;
   }
   @include breakpoint(lg-up) {
+    padding: 30px;
     max-width: 960px;
   }
 }
