beginning of websockets

--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -1,4 +1,4 @@
 <header *ngIf="!helpers.loading"></header>
 <main *ngIf="!helpers.loading" class="page-container">
-  <bucketlist></bucketlist>
+  <chatexample></chatexample>
 </main>
